chore: add worker pool to process multiple franchises

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Subrouter",
         "usecase",
         "Whois",
-        "whoisparser"
+        "whoisparser",
+        "workchan"
     ]
 }
